# ffuzzypp

./: .gitattributes  .gitignore  COPYING.md  Makefile.am  NEWS.md  README.md  configure.ac  ffuzzy.hpp  ffuzzy_declarations.cpp
examples/: .gitignore  Makefile.am  compare-hash.cpp  compute-hash.cpp
ffuzzypp/: base64.hpp  context_hash.hpp  context_hash_fast.hpp  digest.hpp  digest_base.hpp  digest_blocksize.hpp  digest_comparison.hpp  digest_data.hpp  digest_filesize.hpp  digest_generator.hpp  digest_position_array.hpp  digest_position_array_base.hpp  rolling_hash.hpp  rolling_hash_ssdeep.hpp
ffuzzypp/strings/: common_substr.hpp  edit_dist.hpp  nosequences.hpp  position_array.hpp  sequences.hpp  terminators.hpp  transform.hpp
ffuzzypp/utils/: likely.hpp  minmax.hpp  numeric_digits.hpp  ranges.hpp  safe_int.hpp  static_assert_query.hpp  type_modifier.hpp
tests/: .gitignore  Makefile.am  test_compatibility_large.cpp  test_compatibility_small.cpp  test_compatibility_small_2_9.cpp  test_precond.cpp  test_small.cpp
tests/cases/compatibility/common/: blockhash_comparison_min_matching.hpp
tests/cases/compatibility/large/: blockhash_comparison_min_matching.hpp
tests/cases/compatibility/small/: blockhash_comparison_max_matching.hpp  blockhash_comparison_min_matching.hpp  digest_comparison_identical.hpp  digest_comparison_identical_2_9_1.hpp  digest_comparison_identical_2_9_2.hpp  digest_data_naturality.hpp  digest_generator_forms.hpp  digest_generator_initial_guess.hpp  digest_generator_nil.hpp  digest_generator_rolling_hash_overflow.hpp  digest_normalization.hpp  digest_position_array_usage.hpp  digest_usage.hpp
tests/cases/precond/: digest.hpp  digest_filesize.hpp  digest_position_array_base.hpp  position_array.hpp
tests/cases/precond/utils/: minmax.hpp  static_assert_query.hpp  type_modifier.hpp
tests/cases/small/: base64.hpp  common_substr.hpp  context_hash.hpp  digest_blocksize.hpp  digest_comparison_score_cap.hpp  digest_generator.hpp  edit_dist.hpp  nosequences.hpp  position_array.hpp  rolling_hash.hpp  sequences.hpp  terminators.hpp  transform.hpp
tests/cases/small/utils/: minmax.hpp  ranges.hpp
